Assets/CSS/style.css
/* ... */
.specialties .sectionTop .section-title {
    margin-block: clamp(48px, 8vw, 96px);
    font-family: playfair display sc;
    /* font-weight: 700; */
}

.specialties .features {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.specialties .features .feature {
    /* background-color: var(--eerie-black-1); */
    margin-block: clamp(28px, 4vw, 36px);
    width: clamp(320px, 60vw, 600px);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    padding: clamp(16px, 4vw, 24px);
    transition: scale 500ms cubic-bezier(0.25, 0.8, 0.25, 1);
}

.specialties .features .feature .featureTitle {
    font-size: clamp(20px, 5.8vw, 42px);
    margin-block: clamp(8px, 2vw, 12px);
    font-weight: 500;
    color: rgb(230, 230, 230);
}

.specialties .features .feature .featureDescription {
    font-size: clamp(14px, 5.8vw, 16px);
    color: rgb(180, 180, 180);
    padding-inline: clamp(8px, 4vw, 16px);
}

.specialties .features .feature.scaled {
    /* background-color: var(--eerie-black-1); */
    scale: 1.03;
}





.reservation {
    display: flex;
    flex-direction: column;
    /* align-items: center; */
    padding-inline: clamp(16px, 2.5vw, 20px);
    font-family: playfair;
    font-weight: 00;
    position: relative;
}

.reservationSection {
    padding-block: clamp(48px, 8vw, 96px);
    min-height: 100vh;
    display: flex;
    justify-content: center;

}

.reservationSection .quicker {
    color: rgb(199, 199, 199);
    font-size: 20px;
    letter-spacing: 1px;
    margin-bottom: 8px;
}

.reservationSection .or {
    margin-block: 8px;
    color: rgb(168, 168, 168);
}

.highlightIt {
    color: var(--gold-crayola);
}

.reservationSection .fillform {
    /* color: var(--gold-crayola); */
    color: rgb(201, 201, 201);
    font-size: 20px;
    letter-spacing: 1px;
    margin-bottom: 8px;
}

.reservation p {
    color: rgb(196, 196, 196);
}

.reservation .top-text {
    font-size: clamp(12px, 2.5vw, 14px);

    letter-spacing: 4px;
    color: hsl(38, 27%, 64%);
    font-family: playfair;
    font-weight: 100;
}

.reservation .phoneNo {
    color: var(--gold-crayola);
    opacity: 80%;
    /* text-decoration: none; */
    text-underline-offset: 2px;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

.reservation .reservationForm .formTop {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.reservation .preForm {
    text-align: center;
    margin-block: 12px;
}

.reservation .formTitle {
    font-size: clamp(36px, 6.5vw, 60px);
    color: whitesmoke;
    font-family: playfair display sc;
    font-weight: 500;

    margin-block: 20px 32px;
}

.reservationSection .underlay {
    height: 100%;
    left: 0;
    top: 0;
    overflow-y: hidden;
    width: 100%;
    position: absolute;
    background-image: url(../Images/form-pattern.png);
    z-index: -1;
    background-repeat: repeat;
    opacity: 50%;
}

.reservation .reservationForm {
    margin-block: clamp(24px, 4vw, 32px);
    padding-block: clamp(8px, 2vw, 16px);
    background-color: rgb(12, 12, 12);
    border-radius: 8px;
    box-shadow:
        0 6px 12px rgba(0, 0, 0, 0.8)
        /* dark shadow for depth */
        0 2px 6px rgba(255, 255, 255, 0.08);
}

.reservationSection .details {
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 8px;
    align-items: center;
    margin-block: 24px;
}

.reservation .labelInput {
    font-family: playfair;
    display: flex;
    flex-direction: column;
    font-size: 16px;
    justify-content: space-between;
    gap: clamp(4px, 1.5vw, 8px);
    padding: clamp(8px, 5.8vw, 12px) clamp(16px, 3vw, 24px);
}

.reservation .reservationForm .formLabels {
    width: max-content;
}

.reservation .labelInput:nth-child(2) {
    margin-block-start: clamp(24px, 3vw, 36px);
}

.reservation .reservationForm label {
    color: rgb(196, 196, 196);
    font-size: 16px;
}

.reservation .reservationForm .formInputField {
    border-radius: 4px;
    background-color: var(--eerie-black-1);
    padding: 16px 8px;
    font-family: monsterrat;
    font-size: 16px;
    height: 44px;
    border: none;
    color: rgb(196, 196, 196);
    outline: none;
    fill: var(--gold-crayola);
}

.reservation .reservationForm .formInputField:active {
    border: 1px solid var(--gold-crayola);
}

.reservation .reservationForm .formInputField:focus {
    border: 1px solid var(--gold-crayola);
}

.reservation .reservationForm textarea:active {
    border: 1px solid var(--gold-crayola);
}

.reservation .reservationForm textarea:focus {
    border: 1px solid var(--gold-crayola);
}

.reservation .reservationForm textarea {
    border-radius: 4px;
    background-color: var(--eerie-black-1);
    padding: 16px 8px;
    font-family: monsterrat;
    font-size: 16px;
    border: none;
    color: rgb(196, 196, 196);
    outline: none;
    height: clamp(120px, 18vw, 160px);
}

.reservation .reservationForm .cta {
    background-color: var(--gold-crayola);
    padding-block: clamp(16px, 3vw, 24px);
    font-size: clamp(24px, 3vw, 32px);
    font-family: playfair;
    font-weight: 600;
    color: var(--eerie-black-1);
    letter-spacing: 4px;
    border: none;
    border-radius: 4px;
}

.reservation .reservationForm .formSelectField {
    background-color: var(--eerie-black-1);
    color: rgb(196, 196, 196);
    border: none;
    outline: none;
    height: 44px;
    font-family: monsterrat;
    padding-inline-start: 8px;
    font-size: 16px;

    /* font-family: montserrat; */
}

.reservation .reservationForm option:active {
    background-color: var(--eerie-black-1);
    color: var(--gold-crayola);
    /* font-family: montserrat; */
}

.reservation .reservationForm option:focus {
    background-color: var(--eerie-black-1);
    color: var(--gold-crayola);
    /* font-family: montserrat; */
}
/* ... */

